apps/photoprism/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      nodeSelector:
          kubernetes.io/arch: amd64
      containers:
      - name: photoprism
        image: photoprism/photoprism:231128
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: originals
        - mountPath: /photoprism/import
          name: import
        - mountPath: /photoprism/storage
          name: storage
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: originals
        nfs:
          path: /mnt/tank/media/photos
          # readOnly: true # Disables import and upload!
          server: truenas.home
      - name: import
        nfs:
          path: /mnt/tank/kubestore/photoprism/import
          server: truenas.home
      - name: storage
        nfs:
          path: /mnt/tank/kubestore/photoprism/storage
          server: truenas.home
